--- a/html5up-paradigm-shift/index.html
+++ b/html5up-paradigm-shift/index.html
@@ -4,8 +4,8 @@
 		<title>Portfolio → ⱣⱤ₳ꝭꝉṄ</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="A digital designer who have skills like UI, UX, Web, Graphic" />
+		<meta name="keywords" content="UI Designer, UX Designer, Web Designer, Freelance Designer, Graphic Designer" />
 		<link rel="icon" href="images/favicon_UI-UX_Designer.png" sizes="16x16" type="image/png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
@@ -18,7 +18,7 @@
 					<section class="intro">
 						<header>
 							<h1>Prajin CG</h1>
-							<p><strike>Graphic</strike>, <strike>Web</strike>, <strike>UI</strike>, <strike>UX</strike> just a designer who have all the above skills plus fast paced HTML &amp; CSS coding.</p>
+							<p>Digital Designer</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -31,10 +31,10 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Under Development</h2>
+							<h2>UI/UX Design</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p>I am a user experience designer based in Kochi, India. My work combines a background in graphic design with technology and user-centered design thinking. I am currently works at Empress InfoTech, where I am responsible for all phases of the UX process, from concepting and information architecture to wireframing and prototyping. </p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -425,15 +425,15 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="mailto:prajinrock@gmail.com">prajinrock@gmail.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
+									<a href="tel:+919526828267">+91-9526828267</a>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road, Nashville, TN 00000</span>
+									<span></span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
@@ -451,7 +451,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="#">PrajinP</a>.</div>
 
 			</div>
 
