--- a/html5up-paradigm-shift/index.html
+++ b/html5up-paradigm-shift/index.html
@@ -31,7 +31,7 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>UI/UX Design</h2>
+							<h2>Brief</h2>
 						</header>
 						<div class="content">
 							<p>I am a user experience designer based in Kochi, India. My work combines a background in graphic design with technology and user-centered design thinking. I am currently works at Empress InfoTech, where I am responsible for all phases of the UX process, from concepting and information architecture to wireframing and prototyping. </p>
@@ -42,17 +42,17 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
+							<h2>Technologies I Use</h2>
 						</header>
 						<div class="content">
 							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
 							<ul class="feature-icons">
-								<li class="icon fa-laptop">Consequat tempus</li>
-								<li class="icon fa-bolt">Etiam adipiscing</li>
-								<li class="icon fa-signal">Libero nullam</li>
-								<li class="icon fa-gear">Blandit condimentum</li>
-								<li class="icon fa-map-marker">Lorem ipsum dolor</li>
-								<li class="icon fa-code">Nibh amet venenatis</li>
+								<li class="icon fa-laptop">HTML</li>
+								<li class="icon fa-bolt">CSS</li>
+								<li class="icon fa-signal">Jquery UI</li>
+								<li class="icon fa-code">Bootstrap</li>
+								<li class="icon fa-gear">Angular UI</li>
+								<li class="icon fa-map-marker">Google MDL</li>
 							</ul>
 							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div>
@@ -65,7 +65,29 @@
 						</header>
 						<div class="content">
 							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<ul class="feature-icons">
+								<li class="icon fa-laptop">Photoshop</li>
+								<li class="icon fa-bolt">Illustrator</li>
+								<li class="icon fa-signal">InDesign</li>
+								<li class="icon fa-code">Adobe XD</li>
+								<li class="icon fa-gear">Balsamiq</li>
+								<li class="icon fa-map-marker">+</li>
+							</ul>
+<section>
+									<header>
+										<h3>Nisl consequat</h3>
+										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
+									</header>
+									<div class="content">
+										<div class="gallery">
+											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+										</div>
+									</div>
+								</section>
 
+							<!-- Section -->
 							<!-- Section -->
 								<section>
 									<header>
@@ -83,21 +105,7 @@
 								</section>
 
 							<!-- Section -->
-								<section>
-									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
-										</div>
-									</div>
-								</section>
-
-							<!-- Section -->
+								
 								<section>
 									<header>
 										<h3>Lorem gravida</h3>
