--- a/html5up-paradigm-shift/index.html
+++ b/html5up-paradigm-shift/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Portfolio → ⱣⱤ₳ꝭꝉṄ</title>
+		<title>Portfolio → ⱣⱤ₳J!Ṅ</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="A digital designer who have skills like UI, UX, Web, Graphic" />
-		<meta name="keywords" content="UI Designer, UX Designer, Web Designer, Freelance Designer, Graphic Designer" />
+		<meta name="description" content="A digital designer who have skills like UI, UX, Web, Graphic, Prajin" />
+		<meta name="keywords" content="UI Designer, UX Designer, Web Designer, Freelance Designer, Prajin" />
 		<link rel="icon" href="images/favicon_UI-UX_Designer.png" sizes="16x16" type="image/png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
@@ -45,26 +45,26 @@
 							<h2>Technologies I Use</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+							<p>I always use these technologies to <strong>translate my designs into web page prototypes.</strong> And these are awesome things that keep wondering me.</p>
 							<ul class="feature-icons">
 								<li class="icon fa-laptop">HTML</li>
 								<li class="icon fa-bolt">CSS</li>
+								<li class="icon fa-bolt">Sass</li>
 								<li class="icon fa-signal">Jquery UI</li>
 								<li class="icon fa-code">Bootstrap</li>
-								<li class="icon fa-gear">Angular UI</li>
-								<li class="icon fa-map-marker">Google MDL</li>
+								<li class="icon fa-gear">Angular Material UI</li>
 							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p>There are a lot of frameworks which are used for front end development, I didn't get enough opportunity to work with all of them but still I have some more knowledge that I didn't listed above.</p>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Ultrices erat magna sed condimentum</h2>
+							<h2>Familiar Softwares</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<p>Its like watching a rainbow,<strong> when we work with these softwares</strong> because everything is colorful for a designer. Each starts with a color and ends with another color and going through different colors.</p>
 							<ul class="feature-icons">
 								<li class="icon fa-laptop">Photoshop</li>
 								<li class="icon fa-bolt">Illustrator</li>
@@ -75,8 +75,8 @@
 							</ul>
 <section>
 									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
+										<h3>Graphic Design (Print)</h3>
+										<p>I have came through different kinds of innovative designs in the past, but still designing a Poster, Biz Card or a Flyer feels like back to home. Its an old-school thing but I love it.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -91,8 +91,8 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Erat aliquam</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
+										<h3>UI / UX Design</h3>
+										<p>UI and UX are different things but most of the people doesn't know that and they simply call it just designing. So its better to present the way everyone understands and thats the objective of User Experience.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -108,8 +108,8 @@
 								
 								<section>
 									<header>
-										<h3>Lorem gravida</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
+										<h3>Website Design</h3>
+										<p>Or simply web designing, Eventhough UI/UX design is also involved in all design process there are plenty of other things to considered when we design a website as it will be a brand identity or an exhibition.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -459,7 +459,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="#">PrajinP</a>.</div>
+					<div class="copyright">&copy; UI2K. All rights reserved. Design: <a href="#">Prajin</a></div>
 
 			</div>
 
